# proc-blocks

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE_MIT.md  README.md  crates.js  index.html  proc-blocks.rune  release.toml  settings.html  source-files.js
accuracy/: Cargo.toml  all.html  index.html
accuracy/src/: lib.rs
addr2line/: all.html  fn.demangle.html  fn.demangle_auto.html  index.html  struct.Context.html  struct.Frame.html  struct.FrameIter.html  struct.FunctionName.html  struct.Location.html  struct.LocationRangeIter.html
adler/: all.html  fn.adler32_slice.html  index.html  struct.Adler32.html
ahash/: all.html  index.html  struct.AHasher.html  struct.RandomState.html  trait.CallHasher.html
ansi_term/: all.html  enum.Color.html  enum.Colour.html  fn.ANSIByteStrings.html  fn.ANSIStrings.html  fn.sub_string.html  fn.unstyle.html  fn.unstyled_len.html  index.html  struct.ANSIGenericString.html  struct.ANSIGenericStrings.html  struct.Infix.html  struct.Prefix.html  struct.Style.html  struct.Suffix.html  type.ANSIByteString.html  type.ANSIByteStrings.html  type.ANSIString.html  type.ANSIStrings.html
anyhow/: all.html  fn.Ok.html  index.html  macro.anyhow.html  macro.bail.html  macro.ensure.html  struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
apodize/: all.html  fn.blackman_iter.html  fn.cosine_at.html  fn.cosine_iter.html  fn.hamming_iter.html  fn.hanning_iter.html  fn.nuttall_iter.html  fn.triangular_at.html  fn.triangular_iter.html  index.html  sidebar-items.js  struct.CosineWindowIter.html  struct.TriangularWindowIter.html
approx/: all.html  index.html  macro.abs_diff_eq.html  macro.abs_diff_ne.html  macro.assert_abs_diff_eq.html  macro.assert_abs_diff_ne.html  macro.assert_relative_eq.html  macro.assert_relative_ne.html  macro.assert_ulps_eq.html  macro.assert_ulps_ne.html  macro.relative_eq.html  macro.relative_ne.html  macro.ulps_eq.html  macro.ulps_ne.html  struct.AbsDiff.html  struct.Relative.html  struct.Ulps.html  trait.AbsDiffEq.html  trait.RelativeEq.html  trait.UlpsEq.html
argmax/: Cargo.toml  all.html  index.html
argmax/src/: lib.rs
async_trait/: all.html  attr.async_trait.html  index.html
atty/: all.html  enum.Stream.html  fn.is.html  fn.isnt.html  index.html
audio_float_conversion/: Cargo.toml  all.html  index.html
audio_float_conversion/src/: lib.rs
average/: Cargo.toml
backtrace/: all.html  enum.BytesOrWideString.html  enum.PrintFmt.html  fn.clear_symbol_cache.html  fn.resolve.html  fn.resolve_frame.html  fn.resolve_frame_unsynchronized.html  fn.resolve_unsynchronized.html  fn.trace.html  fn.trace_unsynchronized.html  index.html  struct.Backtrace.html  struct.BacktraceFmt.html  struct.BacktraceFrame.html  struct.BacktraceFrameFmt.html  struct.BacktraceSymbol.html  struct.Frame.html  struct.Symbol.html  struct.SymbolName.html
binary_classification/: Cargo.toml  all.html  index.html
binary_classification/src/: lib.rs
bitflags/: all.html  index.html  macro.bitflags.html
bytecheck/: all.html  derive.CheckBytes.html  enum.CStrCheckError.html  enum.EnumCheckError.html  enum.NonZeroCheckError.html  enum.SliceCheckError.html  enum.StrCheckError.html  enum.Tuple10CheckError.html  enum.Tuple11CheckError.html  enum.Tuple12CheckError.html  enum.Tuple1CheckError.html  enum.Tuple2CheckError.html  enum.Tuple3CheckError.html  enum.Tuple4CheckError.html  enum.Tuple5CheckError.html  enum.Tuple6CheckError.html  enum.Tuple7CheckError.html  enum.Tuple8CheckError.html  enum.Tuple9CheckError.html  index.html  sidebar-items.js  struct.ArrayCheckError.html  struct.BoolCheckError.html  struct.CharCheckError.html  struct.StructCheckError.html  struct.TupleStructCheckError.html  trait.CheckBytes.html  trait.Error.html  type.ErrorBox.html
bytecheck_derive/: all.html  derive.CheckBytes.html  index.html  sidebar-items.js
camino/: all.html  enum.Utf8Component.html  enum.Utf8Prefix.html  index.html  sidebar-items.js  struct.FromPathBufError.html  struct.FromPathError.html  struct.Iter.html  struct.Utf8Ancestors.html  struct.Utf8Components.html  struct.Utf8Path.html  (+2 more)
elastic_net/: Cargo.toml  all.html  index.html
elastic_net/src/: lib.rs
f1-score/: Cargo.toml
f1-score/src/: lib.rs
gpt2_tokenizer/: Cargo.toml
gpt2_tokenizer/src/: lib.rs  main.rs
gpt2_tokenizer/src/tokenizer/: base_tokenizer.rs  constants.rs  gpt2_tokenizer.rs  mod.rs  tokenization_utils.rs
gpt2_tokenizer/src/vocab/: base_vocab.rs  bpe_vocab.rs  gpt2_vocab.rs  mod.rs
image/: Cargo.toml
image-normalization/: Cargo.toml
image-normalization/src/: lib.rs
image/src/: lib.rs
image_decode/: Cargo.toml
label/: Cargo.toml  all.html  index.html
label/src/: into_index_macro.rs  lib.rs
linear_regression/: Cargo.toml  all.html  index.html
linear_regression/src/: lib.rs
logistic_regression/: Cargo.toml  all.html  index.html
logistic_regression/src/: lib.rs
logistic_regression_inference/: Cargo.toml
logistic_regression_inference/src/: lib.rs
mean/: Cargo.toml
mean/src/: lib.rs
metric/: Cargo.toml
metric/src/: lib.rs
modulo/: Cargo.toml  all.html  index.html  sidebar-items.js  struct.ProcBlockV1.html
modulo/src/: lib.rs
most_confident_indices/: Cargo.toml  all.html  index.html
most_confident_indices/src/: lib.rs
noise-filtering/: Cargo.toml
noise-filtering/src/: gain_control.rs  lib.rs  noise_reduction.rs
normalize/: Cargo.toml  all.html  index.html
normalize/src/: lib.rs
object_filter/: Cargo.toml  all.html  index.html
object_filter/src/: lib.rs
parse/: Cargo.toml  all.html  index.html
parse/src/: lib.rs
password_strength/: Cargo.toml  all.html  index.html
password_strength/src/: lib.rs
prediction_errors/: Cargo.toml  all.html  index.html
prediction_errors/src/: lib.rs
regex_matcher/: Cargo.toml
regex_matcher/src/: lib.rs
rolling_average/: Cargo.toml
rolling_average/src/: lib.rs
segment_output/: Cargo.toml  all.html  index.html
segment_output/src/: lib.rs
softmax/: Cargo.toml  all.html  index.html
softmax/src/: lib.rs
stats/: Cargo.toml
stats/src/: lib.rs
(+26039 files in other folders)
