[workspace]
members = [
    "argmax",
    "audio_float_conversion",
    "binary_classification",
    "fft",
    "image-normalization",
    "image_input",
    "label",
    "modulo",
    "most_confident_indices",
    "noise-filtering",
    "normalize",
    "object_filter",
    "parse",
    "segment_output",
    "softmax",
    "support",
    "tensor_input",
    "text_extractor",
    "tokenizers",
    "utf8_decode",
    "xtask",
    "password_strength",
    "logistic_regression",
    "linear_regression"
]

# Uncomment these lines if you need to override wit-bindgen with hotg's fork.
#[patch.'https://github.com/bytecodealliance/wit-bindgen']
#wit-bindgen-rust = { git = "https://github.com/hotg-ai/wit-bindgen", branch = "variant-should-be-clone" }
#wit-bindgen-wasmtime = { git = "https://github.com/hotg-ai/wit-bindgen", branch = "variant-should-be-clone" }

[profile.dev]
opt-level = 1

[profile.release]
strip = "debuginfo"
