[workspace]
members = [
    "accuracy",
    "argmax",
    "audio_float_conversion",
    "binary_classification",
    "elastic_net",
    "f1-score",
    "fft",
    "image",
    "image-normalization",
    "label",
    "linear_regression",
    "logistic_regression",
    "modulo",
    "most_confident_indices",
    "noise-filtering",
    "normalize",
    "object_filter",
    "password_strength",
    "prediction_errors",
    "segment_output",
    "softmax",
    "support_vector_classifier",
    "support_vector_regression",
    "support",
    "text_extractor",
    "tokenizers",
    "train_test_split",
    "xtask",
]

# Uncomment these lines if you need to override wit-bindgen with hotg's fork.
[patch.'https://github.com/bytecodealliance/wit-bindgen']
wit-bindgen-rust = { git = "https://github.com/wasmerio/wit-bindgen", branch = "wasmer" }

[profile.dev]
opt-level = 1

[profile.release]
strip = "debuginfo"
