[workspace]
members = [
    "argmax",
    "audio_float_conversion",
    "binary_classification",
    "fft",
    "image-normalization",
    "image_input",
    "label",
    "modulo",
    "most_confident_indices",
    "noise-filtering",
    "normalize",
    "object_filter",
    "parse",
    "segment_output",
    "softmax",
    "support",
    "tensor_input",
    "text_extractor",
    "tokenizers",
    "utf8_decode",
    "xtask",
    "password_strength",
    "logistic_regression",
    "linear_regression",
    "elastic_net",
    "support_vector_classifier",
    "support_vector_regression",
    "train_test_split",
    "accuracy",
    "f1-score",
    "prediction_errors"
]

[profile.dev]
opt-level = 1

[profile.release]
strip = "debuginfo"
