[package]
name = "accuracy"
version = "0.12.2"
edition = "2021"
description = "calculates accuracy of predicted labels when compared to true labels"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotg-rune-proc-blocks = { path = "../support" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }
smartcore = { git = "https://github.com/hotg-ai/smartcore", branch = "development" }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wapm]
namespace = "hotg-ai"
abi = "none"
