[package]
name = "argmax"
version = "0.11.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotg-rune-proc-blocks = "^0.11.0"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", optional = true, rev = "e9c7c0a3405845cecd3fe06f3c20ab413302fc73"  }

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
metadata = ["wit-bindgen-rust"]
