[package]
name = "audio_float_conversion"
version = "0.11.3"
edition = "2018"
publish = false
repository = "https://github.com/hotg-ai/proc-blocks"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotg-rune-proc-blocks = { path = "../support" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[package.metadata.wapm]
namespace = "hotg-ai"
abi = "none"

[dev-dependencies]
pretty_assertions = "0.7.2"

