[package]
name = "audio_float_conversion"
version = "0.12.0"
edition = "2018"
publish = false
repository = "https://github.com/hotg-ai/proc-blocks"
description = "Converted values from i16 data type to a floating-point value."

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotg-rune-proc-blocks = { path = "../support" }
wit-bindgen-rust = { git = "https://github.com/wasmerio/wit-bindgen", branch = "wasmer" }

[package.metadata.wapm]
namespace = "hotg-ai"
abi = "none"

[dev-dependencies]
pretty_assertions = "0.7.2"

