[package]
name = "binary_classification"
version = "0.12.0"
edition = "2018"
publish = false
repository = "https://github.com/hotg-ai/proc-blocks"
description = "A proc-block takes a probability (0.0 to 1.0) score as input and divides the output into two classes ( 0 or 1) based on a threshold"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hotg-rune-proc-blocks = { path = "../support" }
wit-bindgen-rust = { git = "https://github.com/wasmerio/wit-bindgen", branch = "wasmer" }

[package.metadata.wapm]
namespace = "hotg-ai"
abi = "none"
