[package]
name = "elastic_net"
version = "0.12.1"
edition = "2018"
description = "an extension of linear regression that adds L1 and L2 regularization penalties to the loss function during training"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotg-rune-proc-blocks = { path = "../support" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }
smartcore = { git = "https://github.com/hotg-ai/smartcore", branch = "development" }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wapm]
namespace = "hotg-ai"
abi = "none"
