[package]
name = "f1-score"
version = "0.12.0"
edition = "2021"
description = "a proc-block used to calculate f1-score"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotg-rune-proc-blocks = { path = "../support" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }
smartcore = { git = "https://github.com/hotg-ai/smartcore", branch = "development" }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wapm]
namespace = "hotg-ai"
abi = "none"
