[package]
name = "gpt2_tokenizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotg-rune-proc-blocks = "^0.11.0"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", optional = true }
unicode-normalization = {version = "0.1.19", default-features =false}
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bitflags = {version = "1.3.2"}

[features]
default = []
metadata = ["wit-bindgen-rust"]