[package]
name = "image-normalization"
version = "0.11.1"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.14", default-features = false }
hotg-rune-proc-blocks = "^0.11.0"
