[package]
name = "image_input"
version = "0.12.0"
edition = "2021"
description = "Decode an image from a well-known image format."

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotg-rune-proc-blocks = { path = "../support" }
image = "0.24.2"
strum = { version = "0.24.1", features = ["derive"] }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[package.metadata.wapm]
namespace = "hotg-ai"
abi = "none"
