[package]
name = "linear_regression"
version = "0.12.0"
edition = "2018"
description = " a linear approach for modelling the relationship between a scalar response and one or more explanatory variables."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotg-rune-proc-blocks = { path = "../support" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }
smartcore = { git = "https://github.com/hotg-ai/smartcore", branch = "development" }
getrandom = { version = "0.2.6", default-features = false, features = ["custom"] }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wapm]
namespace = "hotg-ai"
abi = "none"