[package]
name = "logistic_regression_inference"
version = "0.12.0"
edition = "2021"
description = "a model template which takes json file as ab argument and perform inference on the test data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotg-rune-proc-blocks = { git = "https://github.com/hotg-ai/proc-blocks", branch = "wit-files-v2" }
smartcore = { git = "https://github.com/hotg-ai/smartcore", branch = "development", features = "serde"}
serde = { version = "1", features = ["derive"], optional = true }
serde_json = "1.0.81"


[package.metadata.wapm]
namespace = "hotg-ai"
abi = "none"
