[package]
name = "mean"
version = "0.11.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotg-rune-core = { version = "0.11.3", default-features = false }
hotg-rune-proc-blocks = "^0.11.0"
ndarray = { version = "0.15.4", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", optional = true }

[features]
default = []
metadata = ["wit-bindgen-rust"]
