[package]
name = "metric"
version = "0.12.1"
edition = "2021"
description = "for assessing model evaluation and performace of model"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotg-rune-proc-blocks = { path = "../support" }
wit-bindgen-rust = { git = "https://github.com/wasmerio/wit-bindgen", branch = "wasmer" }
smartcore = { git = "https://github.com/hotg-ai/smartcore", branch = "development" }
getrandom = { version = "0.2.6", default-features = false, features = ["custom"] }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wapm]
namespace = "hotg-ai"
abi = "none"
