[package]
name = "modulo"
version = "0.12.0"
authors = ["The Rune Developers <developers@hotg.ai>"]
edition = "2018"
publish = false
repository = "https://github.com/hotg-ai/proc-blocks"
description = "Apply the modulus operator to each element in a tensor."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.14", default-features = false }
hotg-rune-proc-blocks = {path = "../support"}
wit-bindgen-rust = { git = "https://github.com/wasmerio/wit-bindgen", branch = "wasmer" }

[lib]
crate-type = ["rlib", "cdylib"]


[package.metadata.wapm]
namespace = "hotg-ai"
abi = "none"
