[package]
name = "most_confident_indices"
version = "0.12.0"
edition = "2021"
publish = false
repository = "https://github.com/hotg-ai/proc-blocks"
description = "Given some confidence values, create a tensor containing the indices of the top N highest confidences."

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotg-rune-proc-blocks = { path = "../support" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[package.metadata.wapm]
namespace = "hotg-ai"
abi = "none"
