[package]
name = "normalize"
version = "0.11.3"
authors = ["The Rune Developers <developers@hotg.ai>"]
edition = "2018"
publish = false
repository = "https://github.com/hotg-ai/proc-blocks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotg-rune-proc-blocks = "^0.11.0"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", optional = true }

[features]
default = []
metadata = ["wit-bindgen-rust"]
