[package]
name = "normalize"
version = "0.12.0"
authors = ["The Rune Developers <developers@hotg.ai>"]
edition = "2018"
publish = false
repository = "https://github.com/hotg-ai/proc-blocks"
description = "normalizes the input to the range [0, 1]"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
hotg-rune-proc-blocks = { path = "../support" }
wit-bindgen-rust = { git = "https://github.com/wasmerio/wit-bindgen", branch = "wasmer" }

[package.metadata.wapm]
namespace = "hotg-ai"
abi = "none"
