[package]
name = "object_filter"
version = "0.11.3"
edition = "2018"
publish = false
repository = "https://github.com/hotg-ai/proc-blocks"
description = "A proc-block which takes 3-d tensor `[1, num_detection, detection_box(x, y, w, h) + confidence_scores + total_detection_classes]` and filter the detected objects to: 1. remove duplicate detection for a single object 2. remove the objects with low confidence based on a threshold giving a 2-d tensor with dimension `[*, 6]` (where * is total number of detected objects,  and 6 -> `[ x-coordinate, y-coordinate, h, w, confidence_value, label_index]`) as output."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num-traits = "0.2.14"
libm = {version = "0.2.1", default-features = false}
hotg-rune-proc-blocks = { path = "../support" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[package.metadata.wapm]
namespace = "hotg-ai"
abi = "none"

