[package]
name = "password_strength"
version = "0.12.0"
edition = "2018"
description = "It takes the utf8 strings as input and return 0, 1, 2 based on the utf8 string length"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotg-rune-proc-blocks = { path = "../support" }
wit-bindgen-rust = { git = "https://github.com/wasmerio/wit-bindgen", branch = "wasmer" }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wapm]
namespace = "hotg-ai"
abi = "none"
