[package]
name = "softmax"
version = "0.11.3"
edition = "2018"
publish = false
repository = "https://github.com/hotg-ai/proc-blocks"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hotg-rune-proc-blocks = { path = "../support" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }
num-traits = {version = "0.2.14", default-features=false, features=["libm"]}

