[package]
name = "softmax"
version = "0.12.0"
edition = "2018"
publish = false
repository = "https://github.com/hotg-ai/proc-blocks"
description = "Find the normalised exponential function (softmax)."
homepage = "https://hotg.ai/"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hotg-rune-proc-blocks = { path = "../support" }
wit-bindgen-rust = { git = "https://github.com/wasmerio/wit-bindgen", branch = "wasmer" }
num-traits = {version = "0.2.14", default-features=false, features=["libm"]}

[package.metadata.wapm]
namespace = "hotg-ai"
abi = "none"
